--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,7 +1,10 @@
-<app-user-list class="user-list" *ngFor="let list of users" [users]="list" [routerLink]="[list.userId]"></app-user-list>
-<button class="fabb" (click)="dialogNuevoUser.showModal()">+</button>
-<dialog method="dialog" #dialogNuevoUser>
-    <app-create-user (cerrarModal)="dialogNuevoUser.close()"></app-create-user>
-</dialog>
-
+<div class="global">
+    <div class="container">
+        <app-user-list class="user-list" *ngFor="let list of users" [users]="list" [routerLink]="[list.userId]"></app-user-list>
+    </div>
+    <button class="fabb" (click)="dialogNuevoUser.showModal()">+</button>
+    <dialog method="dialog" #dialogNuevoUser>
+        <app-create-user (cerrarModal)="dialogNuevoUser.close()"></app-create-user>
+    </dialog>
+</div>
 
