--- a/src/app/components/profile-icon/profile-icon.component.html
+++ b/src/app/components/profile-icon/profile-icon.component.html
@@ -1,3 +1,3 @@
 <div class="profile-icon">
-    <p>{{user.name[0]}}{{user.lastName[0]}}</p>
+    <p>{{user.name[0] | uppercase}}{{user.lastName[0] | uppercase}}</p>
 </div>
