--- a/src/app/pages/currencies/currencies.component.scss
+++ b/src/app/pages/currencies/currencies.component.scss
@@ -31,6 +31,9 @@
 
 .global{
     background-image: url("../../../assets/COINS-CRUD-MENU.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100vh;
     display: grid;
 }
@@ -43,13 +46,18 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-.currency{
+
+
+.currency {
     display: grid;
     grid-template-rows: 1fr 1fr;
     gap: 10px;
     margin-top: 20px;
-    width: 700px;
+    width: 100%;
+    max-height: 300px; /* Ajusta la altura máxima según tus necesidades */
+    overflow-y: auto; /* Habilita el scroll vertical cuando sea necesario */
 }
+
 h2{
     text-align: center;
     margin-bottom: 20px;
