--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -39,20 +39,45 @@
 .container{
     display: grid;
     place-items: center;
-    justify-content: start; /* Cambiado a "center" */
+    justify-content: start; 
     padding-left: 20px;
     padding-right: 20px;
 }
-app-user-list{
-    //lista aesthetic
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        width: 100%;
-        max-width: 1200px;
-        padding: 0 15px;
-}
+.users {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    max-height: 400px;
+    overflow-y: auto;
+    width: 800px; 
+    padding: 16px;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
+    border-radius: 10px;
+    
+  }
+  
 
+  app-user-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 
+  }
+
+  @media (max-width: 768px) {
+    .global{
+      background-image: url('../../../assets/AdminMenuAdminImage.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 100vh;
+      display: grid;
+    }	
+    .users {
+      width: 100%;
+    }
+  }
