--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -21,9 +21,9 @@ header{
     margin-right: 300px;
 }
 //-----TITLE-----
-.title{
+.title{ 
     text-align: center;
-    font-size: 36px;
+    font-size: 3rem;
     font-weight: bold;
     color: variables.$color-blanco-puro;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -47,6 +47,18 @@ a:active{
 }
 .abar{
     color: variables.$color-oscuro-puro;
+    background: variables.$color-oscuro;
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+    font-size: 1.5rem;
+}
+.abar:hover{
+    background: variables.$color-primario-claro;
+    color: variables.$color-blanco-puro;
+    cursor: pointer;
 }
 
 .navigationbar a{
