--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -20,23 +20,51 @@
 }
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 50% 30% 20%;
     grid-template-areas: "currency conversor bar ";
     text-align: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     place-content: center;
+    margin-top: 20px;
+    justify-content: space-around;
+    
     
 }
-.title{
+.title{ //tama;o estandar de letra para titulos y bellos
     color: variables.$color-blanco-puro;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);  
 }
-.currency .conversion .bar{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    margin: 1rem 0;
+
+
+.currency{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(15px);
+    width: 100%;
+    height: 100%;
+    max-height: 550px;
+    border-radius: 20px;
+    
+}
+
+.conversor{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(15px);
+    width: 100%;
+    height: 100%;
+    max-height: 550px;
+    border-radius: 20px;
+}
+
+.bar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
 .region1{
@@ -45,10 +73,24 @@
     gap: 10px;
     margin-top: 20px;
     width: 100%;
-    max-height: 300px; /* Ajusta la altura máxima según tus necesidades */
-    overflow-y: auto; /* Habilita el scroll vertical cuando sea necesario */
+    max-height: 300px; 
+    overflow-y: auto;  
+    background-color: variables.$color-blanco-puro;
 }
-
+::-webkit-scrollbar{ 
+    width: 20px;
+}
+::-webkit-scrollbar-thumb{
+    background: variables.$color-principal;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: variables.$color-blanco-puro;
+}
+::-webkit-scrollbar-track{
+    background: variables.$color-primario-claro;
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px grey;}
 
 .region2{
     color: variables.$color-oscuro-puro;
