--- a/src/app/pages/currencies/currencies.component.scss
+++ b/src/app/pages/currencies/currencies.component.scss
@@ -68,4 +68,21 @@ h2{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+
+::-webkit-scrollbar{ 
+    width: 20px;
+}
+::-webkit-scrollbar-thumb{
+    background: variables.$color-principal;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: variables.$color-blanco-puro;
+}
+::-webkit-scrollbar-track{
+    background: variables.$color-primario-claro;
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px grey;}
+
+
 //completar version mobile, revisar currency con max-width 500px
