--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -20,17 +20,17 @@
 }
 .container{
     display: grid;
+    grid-template-areas: 
+        "currency"
+        "conversor"
+        "bar";
     grid-template-columns: 50% 30% 20%;
-    grid-template-areas: "currency conversor bar ";
     text-align: center;
     width: 100%;
     height: 100%;
     justify-content: center;
     place-content: center;
-    margin-top: 20px;
-    justify-content: space-around;
-    
-    
+    margin-top: 20px;  
 }
 .title{ //tama;o estandar de letra para titulos y bellos
     color: variables.$color-blanco-puro;
@@ -57,6 +57,7 @@
     height: 100%;
     max-height: 550px;
     border-radius: 20px;
+    margin-left: 20px;
 }
 
 .bar{
@@ -106,7 +107,15 @@
         width: 100%;
     }
     .currency .conversion .bar{
-        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: 0 auto;
     }
     
+    .conversion{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+    }
 }
