--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -20,23 +20,26 @@
 }
 .container{
     display: grid;
-    grid-template-areas: 
+    grid-template-areas:
         "currency"
         "conversor"
         "bar";
-    grid-template-columns: 50% 30% 20%;
+    grid-template-columns: repeat(
+        auto-fit,
+        minmax(300px, 1fr)
+    );
     text-align: center;
     width: 100%;
     height: 100%;
     justify-content: center;
     place-content: center;
-    margin-top: 20px;  
+    margin-top: 20px;
 }
 .title{ //tama;o estandar de letra para titulos y bellos
     color: variables.$color-blanco-puro;
     font-size: 2.5rem;
     font-weight: 700;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);  
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 
