--- a/src/app/components/currencylist/currencylist.component.html
+++ b/src/app/components/currencylist/currencylist.component.html
@@ -1,5 +1,7 @@
 <div class="global">
-    <p>{{ currency.currencyName }}</p>
-    <p>{{ currency.currencySymbol }}</p>
-    <p>{{ currency.currencyValue }}</p>
+    <div class="container">
+        <p>{{ currency.currencyName }}</p>
+        <p>{{ currency.currencySymbol }}</p>
+        <p>{{ currency.currencyValue }}</p>
+    </div>
 </div>
