--- a/src/app/components/exchange/exchange.component.scss
+++ b/src/app/components/exchange/exchange.component.scss
@@ -82,3 +82,27 @@
     color: variables.$color-blanco-puro;
     }
 }
+@media (max-width: 768px) {
+    .inp-conversion {
+      width: 100%; /* Cambiar el ancho al 100% para adaptarse a dispositivos móviles */
+      max-width: 250px;
+    }
+  
+    .btn {
+      margin-top: 20px; /* Reducir el margen superior para dispositivos móviles */
+    }
+  
+    .result {
+      margin-top: 20px; /* Reducir el margen superior para dispositivos móviles */
+    }
+  
+    .container {
+      width: 100%; /* Cambiar el ancho al 100% para adaptarse a dispositivos móviles */
+      margin: 0; /* Eliminar el margen para que ocupe todo el ancho disponible */
+    }
+    
+    .container p {
+      text-align: center; /* Centrar el texto en dispositivos móviles */
+    }
+  }
+  
