--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -11,7 +11,12 @@
     flex-direction: column;
     justify-content: space-between;
     transition: width 0.2s;
+    border-radius: 10px;
 
+}
+
+.logout{
+    display: none;
 }
 
 .icons{
@@ -75,5 +80,9 @@ ul li a{
       justify-content: space-around;
       width: 100%;
       height: auto;
-    }
+    }&:hover {
+        :disabled {
+          width: 100%;  
+        }
   }
+}
