--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -20,20 +20,14 @@
 }
 .container{
     display: grid;
-    grid-template-areas:
-        "currency"
-        "conversor"
-        "bar";
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(300px, 1fr)
-    );
+    grid-template-columns: 1fr 2fr 1fr;
     text-align: center;
     width: 100%;
     height: 100%;
     justify-content: center;
     place-content: center;
     margin-top: 20px;
+    gap: 20px;
 }
 .title{ //tama;o estandar de letra para titulos y bellos
     color: variables.$color-blanco-puro;
@@ -60,7 +54,6 @@
     height: 100%;
     max-height: 550px;
     border-radius: 20px;
-    margin-left: 20px;
 }
 
 .bar{
@@ -100,25 +93,68 @@
     color: variables.$color-oscuro-puro;
 }
 
+.mobile-message{
+    color: variables.$color-blanco-puro;
+}
 
 //FALTA DE RESPONSIVE------------------------------------------------------------------
-@media (max-width: 768px){
+
+//estilo mobile
+@media (max-width: 768px) {
     .container{
-        grid-template-areas: "currency" "conversor" "bar";
+        display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        text-align: center;
         width: 100%;
+        height: 100%;
+        justify-content: center;
+        place-content: center;
+        margin-top: 20px;
+        gap: 20px;
     }
-    .currency .conversion .bar{
-        grid-template-rows: 1fr;
-        margin: 0 auto;
+    .title{ //tama;o estandar de letra para titulos y bellos
+        color: variables.$color-blanco-puro;
+        font-size: 2.5rem;
+        font-weight: 700;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
-    
-    .conversion{
+    .currency{
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(15px);
+        width: 100%;
+        height: 100%;
+        max-height: 550px;
+        border-radius: 20px;
+    }
+    .conversor{
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(15px);
+        width: 100%;
+        height: 100%;
+        max-height: 550px;
+        border-radius: 20px;
+    }
+    .bar{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        margin: 0;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+    .region1{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        gap: 10px;
+        margin-top: 20px;
+        width: 100%;
+        max-height: 300px; 
+        overflow-y: auto;  
+        background-color: variables.$color-blanco-puro;
+    }
+    .region2{
+        color: variables.$color-oscuro-puro;
+    }
+    .mobile-message{
+        color: variables.$color-blanco-puro;
     }
 }
