--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <img [routerLink]="['/conversor']" src="./assets/newlogo.png" alt="imagen empresa" class="logo">
     <span class="title">Exchange click</span>
-    <nav class="navigationbar">
-        <a [routerLink]="['/conversor']" class="abar" >Conversor<span class="point">.</span></a>
+    <nav *ngIf="!isLoginOrRegister()" class="navigationbar">
+        <a  [routerLink]="['/conversor']" class="abar" >Conversor<span class="point">.</span></a>
         <a class="abar" [routerLink]="['/']" (click)="logout()">Salir<span class="point">.</span></a>
     </nav>
 </header>
