--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,12 @@
 <div class="global" >
     <ul>
-        <li><a [routerLink]="['/profile/0']">Perfil</a><img class="icons" src="../../../assets/icons/hombre.png"></li>
-        <li><a [routerLink]="['/currencies']">Monedas</a><img class="icons"src="../../../assets/icons/monedas.png"></li>
-        <li><a *ngIf="isAdmin" [routerLink]="['/users']">Usuarios</a><img class="icons" src="../../../assets/icons/apoyo.png"> </li>
-        <li><a [routerLink]="['/subscriptions/0']">Subscripcion</a><img class="icons" src="../../../assets/icons/repetir.png"></li>
-        <li class="logout"><a [routerLink]="['/']" (click)="logout()">Salir</a><img class="icons" src="../../../assets/icons/exportar.png"></li>
+        <li><a [routerLink]="['/profile/0']">Perfil</a><img (click)="toRoute('/profile/0')" class="icons" src="../../../assets/icons/hombre.png"></li>
+        <li><a [routerLink]="['/currencies']">Monedas</a><img (click)="toRoute('/currencies')" class="icons"src="../../../assets/icons/monedas.png"></li>
+        <li><a *ngIf="isAdmin" [routerLink]="['/users']">Usuarios</a><img (click)="toRoute('/users')" class="icons" src="../../../assets/icons/apoyo.png"> </li>
+        <li><a [routerLink]="['/subscriptions/0']">Subscripcion</a><img (click)="toRoute('/subscriptions/0')" class="icons" src="../../../assets/icons/repetir.png"></li>
+        <li class="logout"><a [routerLink]="['/']" (click)="logout()">Salir</a><img (click)="logout()" class="icons" src="../../../assets/icons/exportar.png"></li>
     </ul>
 </div>
+
+
 
