--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,22 +1,24 @@
 @use "./../../../assets/variables.scss";
+
 footer{
     background: linear-gradient(45deg, #233151, #0E173A);
-    
+    padding: 5px 0; // Reducir aún más el padding vertical
 }
+
 footer p{
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 30px; // Reducir aún más el tamaño de la fuente
     font-weight: bold;
     text-align: center;
-    padding: 0.5rem;
-    transition: all 0.3s ease-in-out;
 }
+
 .row{
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
     margin: 0 auto;
 }
+
 .socialmedia{
     display: flex;
     flex-direction: row;
@@ -26,8 +28,9 @@ footer p{
     align-self: center;
     gap: 10px;
 }
+
 .socialmedia a{
-    font-size: 12px;
+    font-size: 15px; // Reducir el tamaño de la fuente de los enlaces
     color: #fff;
     cursor: pointer;
     user-select: none;
