--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -38,7 +38,7 @@
 
 
 .currency{
-    background: rgba(255, 255, 255, 0.2);
+    background: variables.$color-gris-puro;
     backdrop-filter: blur(15px);
     width: 100%;
     height: 100%;
@@ -48,7 +48,7 @@
 }
 
 .conversor{
-    background: rgba(255, 255, 255, 0.2);
+    background: variables.$color-gris-puro;
     backdrop-filter: blur(15px);
     width: 100%;
     height: 100%;
@@ -72,7 +72,6 @@
     width: 100%;
     max-height: 300px; 
     overflow-y: auto;  
-    background-color: variables.$color-blanco-puro;
 }
 ::-webkit-scrollbar{ 
     width: 20px;
@@ -119,15 +118,16 @@
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
     .currency{
-        background: rgba(255, 255, 255, 0.2);
+        background: variables.$color-gris-puro;
         backdrop-filter: blur(15px);
         width: 100%;
         height: 100%;
         max-height: 550px;
         border-radius: 20px;
+        
     }
     .conversor{
-        background: rgba(255, 255, 255, 0.2);
+        background: variables.$color-gris-puro;
         backdrop-filter: blur(15px);
         width: 100%;
         height: 100%;
@@ -147,14 +147,42 @@
         gap: 10px;
         margin-top: 20px;
         width: 100%;
-        max-height: 300px; 
-        overflow-y: auto;  
-        background-color: variables.$color-blanco-puro;
+        max-height: 300px;
+        overflow-y: auto;
     }
     .region2{
         color: variables.$color-oscuro-puro;
     }
     .mobile-message{
         color: variables.$color-blanco-puro;
+    }
+}
+
+
+@media only screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+    .global .container{
+        gap: 10px; // Ajustar el espacio entre elementos para MacBook Air 13"
+        display: grid;
+        justify-content: center;
+        place-content: center;
+        margin: 0 auto;
+    }
+    .container .currency{
+        width: 550px;
+    }
+    .title {
+      font-size: 2rem; // Ajustar el tamaño de fuente para MacBook Air 13"
+    }
+
+    .currency, .conversor {
+      max-height: 500px; // Ajustar la altura máxima para MacBook Air 13"
+    }
+
+    .region1 {
+      max-height: 300px; // Ajustar la altura máxima para MacBook Air 13"
     }
 }
