--- a/src/app/components/create-currency/create-currency.component.scss
+++ b/src/app/components/create-currency/create-currency.component.scss
@@ -1,1 +1,8 @@
 @use "./../../../assets/forms.scss";
+
+.global {
+    background-image: url(../../../assets/CurrencyCreation.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
