--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="islogued notlogued">
     <img [routerLink]="['/conversor']" src="./assets/newlogo.png" alt="imagen empresa" class="logo">
     <span class="title">Exchange click</span>
     <nav *ngIf="!isLoginOrRegister()" class="navigationbar">
