--- a/src/app/pages/currency-detail/currency-detail.component.html
+++ b/src/app/pages/currency-detail/currency-detail.component.html
@@ -1,8 +1,8 @@
 <div class="global">
     <div class="container">
-            <p class="nom">Nombre: {{currency.currencyName}}</p>
-            <p class="ape">Simbolo: {{currency.currencySymbol}}</p>
-            <p> valor: {{currency.currencyValue}}</p>
+            <p class="properties">Nombre: {{currency.currencyName}}</p>
+            <p class="properties">Simbolo: {{currency.currencySymbol}}</p>
+            <p class="properties"> valor: {{currency.currencyValue}}</p>
             <div class="cont-btn">
                 <button class="logbtn" (click)="borrarMoneda()">Borrar moneda</button>
                 <button class="logbtn" (click)="modalEditar.showModal()">Editar moneda</button>
