--- a/src/app/pages/user-detail/user-detail.component.html
+++ b/src/app/pages/user-detail/user-detail.component.html
@@ -1,14 +1,15 @@
 <div class="global">
     <div class="container">
-            <p class="nom">Nombre: {{userForCreation.name}}</p>
-            <p class="ape">Apellido: {{userForCreation.lastName}}</p>
-            <p> Email: {{userForCreation.email}}</p>
-            <p class="ape">Usuario: {{userForCreation.username}}</p>
-            <p class="ape">Rol: {{userForCreation.role}}</p>
-            <p class="ape">Cambios restantes: {{userForCreation.subCount}}</p>
+            <p class="properties">Nombre: {{userForCreation.name}}</p>
+            <p class="properties">Apellido: {{userForCreation.lastName}}</p>
+            <p class="properties"> Email: {{userForCreation.email}}</p>
+            <p class="properties">Usuario: {{userForCreation.username}}</p>
+            <p class="properties">Rol: {{userForCreation.role}}</p>
+            <p class="properties">Cambios restantes: {{userForCreation.subCount}}</p>
             <div class="cont-btn">
-                <button class="logbtn" (click)="borrarUsuario()">Borrar ususario</button>
                 <button class="logbtn" (click)="modalEditar.showModal()">Editar usuario</button>
+                <button class="logbtn" (click)="borrarUsuario()">Borrar usuario</button>
+                
             </div>
             <dialog method="modal" #modalEditar>
                 <app-create-user (cerrarModal)="modalEditar.close()" [userForCreation]="userForCreation"></app-create-user>
