--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -15,3 +15,4 @@ $color-terciario: #FF5722;
 $color-oscuro-puro:#000000;
 $color-blanco-puro:#FFFFFF;
 $color-gris-puro:#535e75;
+$color-loginyregister:#152B65;
