--- a/src/app/components/create-user/create-user.component.scss
+++ b/src/app/components/create-user/create-user.component.scss
@@ -1,1 +1,9 @@
 @use "./../../../assets/forms.scss";
+.global {
+    background-image: url(../../../assets/CreationPage1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+ 
