--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
         <li><a [routerLink]="['/currencies']">Monedas</a><img (click)="toRoute('/currencies')" class="icons"src="../../../assets/icons/monedas.png"></li>
         <li><a *ngIf="isAdmin" [routerLink]="['/users']">Usuarios</a><img (click)="toRoute('/users')" class="icons" src="../../../assets/icons/apoyo.png"> </li>
         <li><a [routerLink]="['/subscriptions/0']">Subscripcion</a><img (click)="toRoute('/subscriptions/0')" class="icons" src="../../../assets/icons/repetir.png"></li>
-        <li class="logout"><a [routerLink]="['/']" (click)="logout()">Salir</a><img (click)="logout()" class="icons" src="../../../assets/icons/exportar.png"></li>
+        <li class="logout"><a [routerLink]="['/conversor']" (click)="logout()">Salir</a><img (click)="logout()" class="icons" src="../../../assets/icons/exportar.png"></li>
     </ul>
 </div>
 
