--- a/src/assets/forms.scss
+++ b/src/assets/forms.scss
@@ -4,15 +4,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 83.9vh; //ver si se puede cambiar por si falla en otros dispositivos
+    height: 100vh; //ver si se puede cambiar por si falla en otros dispositivos
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     //background:linear-gradient(to bottom right, #1a429c, #1b2a4a);
     //background: variables.$color-principal;
-    background-image: url(/assets/1275.jpg);
+    background-image: url(../assets/LoginRegisterScreen.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+}
+
+.title{
+    font-size: 50px;
+    color: variables.$color-blanco-puro;
+    margin-bottom: 20px;
+    text-align: center;
+
 }
 
 .container{
@@ -44,7 +52,7 @@
     position: relative;
 }
 
-input{
+select,input{
     color: #fff;
     font-size: 1rem;
     font-weight: 300;
@@ -72,7 +80,7 @@ input{
     font-size: large;
     overflow: hidden;
 }
-.textinput input{
+.textinput input,select{
     color: #fff;
     background: none;
     border: none;
@@ -142,12 +150,28 @@ a{
 }
 
 //-----MEDIA-----
-@media (min-width:768px){
-    .container{
-        grid-template-columns: 50% 50%;
-        grid-template-areas: "login design";
+@media (max-width: 768px) {
+    .global {
+        height: 100vh;
     }
-    .design{
-        display: block;
+
+    .container {
+        width: auto;
+        height: 90vh;
+        grid-template-columns: 100%;
+        grid-template-areas: "login";
+    }
+
+    .login {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .textinput {
+        width: 100%;
+    }
+
+    .logbtn {
+        width: 100%;
     }
 }
